k8s/manifests/gitopsapp-patches/deployment_app_resources.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitopsapp
spec:
  template:
    spec:
      containers:
      - name: app
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
