k8s/manifests/gitopsapp-patches/secret_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitopsapp
spec:
  template:
    spec:
      containers:
      - name: app
