k8s/manifests/gitopsapp-patches/ingress_hosts.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitopsapp
spec:
  rules:
  - host: __CUSTOM_FQDN__
    http:
      paths:
      - path: /
        backend:
          serviceName: gitopsapp
          servicePort: http
